--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,28 @@
 
 {% block content %}
 
-<h1>Home Page</h1>
+<section>
+    <h3>Events</h3>
+    <div id = "events--lists">
+        {% for event in events %}
+        <div>
+            {{event.name}}
+        </div>
+        {% endfor %}
+
+    </div>
+</section>
+
+<section>
+    <h3>Users</h3>
+    <div id = "users--lists">
+        {% for user in users %}
+        <div>
+            {{user.name}}
+        </div>
+        {% endfor %}
+
+    </div>
+</section>
 
 {% endblock %}
