--- a/templates/home.html
+++ b/templates/home.html
@@ -6,9 +6,11 @@
     <h3>Events</h3>
     <div id = "events--lists">
         {% for event in events %}
-        <div>
-            {{event.name}}
-        </div>
+        <a href = "{% url 'event' event.id %}">
+            <div>
+                {{event.name}}
+            </div>
+        </a>
         {% endfor %}
 
     </div>
